@@ -17,7 +17,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-06-21 20:59:08 +0300 $
+ * $Date: 2009-06-23 19:24:52 +0300 $
  */
 
 /* OLPC XO DPI resolution detection */
@@ -170,13 +170,16 @@
 }
 
 .paintweb_tools {
+  border-left: 1px solid #d6d6d6;
+  border-top: 1px solid #d6d6d6;
   list-style: none;
   margin: 0;
-  padding: 0
+  padding: 0;
+  width: 384px;
 }
 
 /* .clearfix */
-.paintweb_statusbar:after, .paintweb_tools:after, .paintweb_tabPanel_main > .paintweb_tab:after, .paintweb_tabsList:after {
+.paintweb_statusbar:after, .paintweb_tools:after, .paintweb_tabsList:after {
   content: ".";
   display: block;
   visibility: hidden;
@@ -187,13 +190,6 @@
 .paintweb_tabPanel_main {
   border: 1px solid #9e9e9e;
   border-width: 1px 1px 0 1px;
-}
-
-.paintweb_main_main {
-  border-left: 1px solid #d6d6d6;
-  border-top: 1px solid #d6d6d6;
-  float: left;
-  margin: 5px
 }
 
 .paintweb_tool, .paintweb_command, .paintweb_icon {
@@ -307,6 +303,7 @@
 .paintweb_main_line_polygon,
 .paintweb_main_line_rectangle,
 .paintweb_main_line_text,
+.paintweb_main_main,
 .paintweb_main_selection,
 .paintweb_main_shadow,
 .paintweb_main_text { margin: 5px }
@@ -485,6 +482,12 @@
 }
 
 .paintweb_opt_shadowColor { border-top: 0 !important }
+
+.paintweb_shadow_shadowColor {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
 
 .paintweb_opt_shadowBlur {
   left: 26em;
@@ -671,6 +674,82 @@
   margin-top: 10px;
 }
 
+.paintweb_floatingPanel_colormixer {
+  top: 150px;
+  left: 150px;
+  width: 500px;
+}
+
+.paintweb_colorInput {
+  display: block;
+  background: url('images/checkers.png');
+  border: 1px solid #000;
+  width: 40px;
+  height: 20px;
+}
+
+.paintweb_colorInputActive {
+  outline: 2px solid #99f;
+}
+
+.paintweb_colorInput a {
+  display: block;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  text-indent: 110%;
+  white-space: nowrap;
+}
+
+.paintweb_strokeFillStyles {
+  background: url("images/toolbar-colors.png") no-repeat;
+  width: 69px;
+  height: 67px;
+  font-size: 0.9em;
+  position: absolute;
+  top: 0;
+  left: 395px;
+}
+
+.paintweb_opt_fillStyle {
+  margin: 2px 0 0 13px;
+  padding: 0;
+  height: 51px;
+}
+
+.paintweb_opt_strokeStyle {
+  margin: 0;
+  padding: 0 11px 0 0;
+  text-align: right;
+}
+
+.paintweb_fillStyle {
+  position: absolute;
+  top: 16px;
+  left: 13px;
+  width: 25px;
+  height: 25px;
+}
+
+.paintweb_strokeStyle {
+  position: absolute;
+  bottom: 14px;
+  right: 13px;
+  width: 25px;
+  height: 25px;
+}
+
+
+.paintweb_tabPanel_colorvis {
+  position: absolute;
+  width: 35%;
+}
+
+.paintweb_tabPanel_colormixer_inputs {
+  margin-left: 40%;
+}
+
 
 /* Icons */
 
@@ -756,89 +835,6 @@
 .paintweb_textAlign_right a { background-image: url('icons/text-align-right.png') }
 
 /*
-
-#coloreditor h1 {
-  padding-left: 34px;
-  margin: 2px 0 0;
-  color: #fff;
-  text-shadow: 0 0 5px #000;
-}
-
-
-/* The two color options in the tool bar * /
-
-#toolbar > .separator {
-  clear: both;
-  height: 10px;
-  background: url("images/separator.png") center center no-repeat;
-  padding: 4px 0;
-  text-indent: -100px;
-  overflow: hidden;
-}
-
-#colors-fill-stroke {
-  position: relative;
-  background: url("images/toolbar-colors.png") 1px 0 no-repeat;
-  height: 58px;
-  color: #fff;
-  font-size: 0.9em;
-  text-shadow: 0 0 3px #000;
-}
-
-#colors-fill-stroke p {
-  padding: 0;
-  margin: 0;
-}
-
-#colors-fill-stroke span {
-  position: absolute;
-  display: block;
-  cursor: pointer;
-}
-
-#toolbar .colorpreview {
-  width: 21px;
-  height: 21px;
-  border: 1px solid #fff;
-}
-
-#opt-strokeStyle {
-  top: 46px;
-  right: 21px;
-}
-
-#in-strokeStyle {
-  top: 23px;
-  left: 32px;
-}
-
-#opt-fillStyle {
-  left: 20px;
-}
-
-#in-fillStyle {
-  top: 12px;
-  left: 21px;
-}
-
-/* The Close button, used by the Help dialog and the color editor * /
-
-.btn_close {
-  position: absolute;
-  top: 2px;
-  right: 17px;
-  background: url("images/buttons/close.png") no-repeat;
-  padding: 15px 0 0 0;
-  margin: 0;
-  height: 0;
-  width: 16px;
-  overflow: hidden;
-  cursor: pointer;
-}
-
-.btn_close:hover, .btn_close:focus {
-  background-position: 0 -15px;
-}
 
 /* The color editor * /
 
